# AgenticGenrativeAI

./: .gitignore  Demystifying Self-Attention: Core Concepts, Implementations, and Optimizations in 2026.md  understanding_and_implementing_self-attention_in_neural_networks.md  understanding_self-attention:_the_building_block_of_modern_deep_learning.md
FastApi/: main.py  patients.json
blog-writing-agent/: 1_bwa_basic.ipynb  2_bwa_improved_prompting.ipynb  3_bwa_research.ipynb  4_bwa_research_fine_tuned.ipynb  5_bwa_image.ipynb  bwa_backend.py  bwa_frontend.py  requirements.txt  tavily_test.ipynb
chatbot-in-langgraph/: chatbot.db  chatbot.db-shm  chatbot.db-wal  requirements.txt  (+1 more)
personal-ai-assistant/: .gitignore  Dockerfile  OVERVIEW.md  pyproject.toml  requirements.txt
personal-ai-assistant/backend/: graph_routing.py  main.py
personal-ai-assistant/backend/agents/: __init__.py  langgraph_flow.py  memory.py  nodes.py
personal-ai-assistant/backend/api/: __init__.py  answer_source.py
personal-ai-assistant/backend/api/routes/: __init__.py  documents.py  health.py  query.py  tools.py
personal-ai-assistant/backend/api/schemas/: __init__.py  documents.py  health.py  query.py
personal-ai-assistant/backend/api/utils/: uploads.py
personal-ai-assistant/backend/core/: config.py  constants.py
personal-ai-assistant/backend/database/: checkpoint_store.py  ingest_registry.py  vector_store.py
personal-ai-assistant/backend/rag/: __init__.py  ingestion.py  retriever.py  self_rag_pipeline.py
personal-ai-assistant/backend/tools/: mcp_client.py  web_search.py
(+68 files in other folders)
